@startuml
'https://plantuml.com/class-diagram

class ConsoleAuto
class ConsoleFile
class Date
class HelperClassLink
class InteractiveConsole
class Shops
class Start
class ThreadList
class ThreadTask

ThreadList <|-- ThreadTask

Start <|-- InteractiveConsole
Start <|-- ConsoleAuto

ConsoleAuto <|-- HelperClassLink
ConsoleAuto <|-- ThreadTask

InteractiveConsole <|-- HelperClassLink
InteractiveConsole <|-- HelperClass
InteractiveConsole <|-- ConsoleFile
InteractiveConsole <|-- ThreadList

HelperClassLink <|-- Shops
HelperClassLink <|-- ConsoleFile

Shops <|-- Date

@enduml